# Synthetic-Pair-Deviation-Engine

./: GAMEPLAN.md  HOW_TO_RUN.md
crypto-arbitrage-engine/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md
crypto-arbitrage-engine/config/: config.json  exchanges.json
crypto-arbitrage-engine/scripts/: build.sh  quick_start.sh  run.sh  setup.sh
crypto-arbitrage-engine/src/: main.cpp
crypto-arbitrage-engine/src/arbitrage/: arbitrage_detector.cpp  arbitrage_detector.h  opportunity.h
crypto-arbitrage-engine/src/core/: constants.h  types.h  utils.h
crypto-arbitrage-engine/src/exchange/: exchange_base.cpp  exchange_base.h
crypto-arbitrage-engine/src/exchange/binance/: binance_websocket.cpp  binance_websocket.h
crypto-arbitrage-engine/src/exchange/bybit/: bybit_websocket.cpp  bybit_websocket.h
crypto-arbitrage-engine/src/exchange/okx/: okx_websocket.cpp  okx_websocket.h
crypto-arbitrage-engine/src/market_data/: market_data_manager.cpp  market_data_manager.h  order_book.cpp  order_book.h
crypto-arbitrage-engine/src/performance/: metrics_collector.cpp  metrics_collector.h  performance_monitor.h
crypto-arbitrage-engine/src/risk/: risk_manager.cpp  risk_manager.h
crypto-arbitrage-engine/src/synthetic/: futures_pricer.cpp  futures_pricer.h  perpetual_pricer.cpp  perpetual_pricer.h  synthetic_pricer.cpp  synthetic_pricer.h
crypto-arbitrage-engine/src/utils/: logger.cpp  logger.h  memory_pool.h  thread_pool.cpp  thread_pool.h
